# xclogger-server

./: .gitignore  package.json
msg-server/: Cargo.toml  build.rs
msg-server/.cargo/: config.toml
msg-server/src/: ffi_wrapper.rs  lib.rs  message.cc  zmq_support.rs
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  my_database.db  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lib/: db.rs  errors.rs  loghandler.rs  mod.rs
src-tauri/src/lib/db/: config.rs  messagedb.rs  mod.rs
src/api/: client.ts  rules.ts  tauriClient.ts
src/components/: ApiDebugView.tsx  AppHeader.tsx  CmdMessageCard.tsx  ColorEditor.tsx  LogView.tsx  MessageCard.tsx  SearchBar.tsx  SettingsPanel.tsx
src/components/public/: ActionToolBar.tsx  FoldArea.tsx  TextEidtDelay.tsx
src/components/settings/: LabelPanel.tsx  LevelPanel.tsx  Panel.tsx  ProjectsPanel.tsx  RolePanel.tsx  RuleSetPanel.tsx
